Update icons.css. Fix: icons not centered in Firefox.

--- a/css/icons.css
+++ b/css/icons.css
@@ -6,6 +6,7 @@
   padding: 0;
   list-style: none;
   text-align: center;
+  justify-content: center;
   width: 100%;
   display: flex;
   flex-wrap: wrap;
